# django-dev-template

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
apps/account/: admin.py  api.py  models.py  schemas.py
apps/account/migrations/: 0001_initial.py
apps/front/: forms.py  urls.py  views.py
core/: __init__.py  celery.py  settings.py  urls.py
nginx/: nginx.conf
src/auth/: auth.py
src/router/: api.py
src/user/: api.py  schemas.py
src/utils/: captcha.py  jwt.py  middleware.py  pagination.py  pay.py
templates/auth/: base.html  login.html  register.html
templates/home/: index.html
