[project]
name = "django-dev-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "celery>=5.6.3",
    "django==5.2",
    "django-cors-headers>=4.9.0",
    "django-dbbackup>=5.3.0",
    "django-ninja>=1.6.2",
    "django-simple-captcha>=0.6.3",
    "django-simpleui>=2026.1.13",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-decouple>=3.8",
    "redis>=8.0.1",
]
